--- a/english.html
+++ b/english.html
@@ -15,7 +15,7 @@ layout: default
 
     <div style="text-align:center;font-size:18px;padding-bottom:40px">
 
-      <p><strong>Freelance scrum product owner | digital product developer <br />  </strong></p>
+      <p><strong>Freelance scrum product owner | digital product developer <br /> available from July 1st 2018<br />  </strong></p>
 
     </div>
 
@@ -30,6 +30,7 @@ layout: default
     <p>I have extensive experience working according to Agile- and Lean UX-principles together with full-stack DevOps-teams in continuous integration / continuous deployment environments.</p>
     <p> I am a strong communicator and negotiator with a keen eye for challenges, needs and concerns of clients, team members and stakeholders. Building and guiding online business- and development teams with a shared vision and a drive to perform and deliver is something I love to do.
     </p>
+    <p>As of July 1, 2018 I am available to help you accelerate the digital transformation of your organization.</p>
   </div>
 
   <div style="text-align:justify;padding-bottom:20px;">
