Profiel update na 2 jr KVK
Nederlandse en Engelse profiel geupdate, nieuwe functienaam, font titel "Go Nimble" groter gemaakt

--- a/english.html
+++ b/english.html
@@ -15,7 +15,7 @@ layout: default
 
     <div style="text-align:center;font-size:18px;padding-bottom:40px">
 
-      <p><strong>Freelance scrum product owner | digital product developer <br />  </strong></p>
+      <p><strong>Interim Product Manager | Product Owner Online <br />  </strong></p>
 
     </div>
 
@@ -26,9 +26,20 @@ layout: default
   </div>
 
   <div style="text-align:justify;">
-    <p> I am a certified scrum product owner with a passion to drive digital business capabilities forward. With eight years of B2C and B2B e-commerce experience, I have a proven track record in increasing profitability through initiation and delivery of online optimization and innovation projects in a complex online and organisational environment. As a positive challenger I am committed to creating the ultimate digital user experience.</p>
-    <p>I have extensive experience working according to Agile- and Lean UX-principles together with full-stack DevOps-teams in continuous integration / continuous deployment environments.</p>
-    <p> I am a strong communicator and negotiator with a keen eye for challenges, needs and concerns of clients, team members and stakeholders. Building and guiding online business- and development teams with a shared vision and a drive to perform and deliver is something I love to do.
+    <p>
+      I am an experienced and certified freelance scrum product owner with a passion to drive digital business capabilities forward. In collaboration with full-stack DevOps teams, designers and analysts, I create awesome digital user experiences.
+    </p>
+    <p>
+      As a senior product owner, I have a proven track record in increasing the profitability (> 1 million EBIT contribution) of high-traffic websites by initiating and executing online product development projects in complex organizational and online environments.
+    </p>
+    <p>
+      My approach is characterized by translating the organizational strategy into an online product vision and developing user-friendly online products that measurably contribute to the set goals step-by-step.
+    </p>
+    <p>
+      I am a strong communicator (Executive Board level) and negotiator with a keen eye for the challenges, needs and concerns of customers, team members and management. Thanks to my seniority, I am able to adopt my leadership style to the situation and context of the moment. Often in the style of visionary who takes the lead and sets clear priorities, if possible, more in the role of servant leader and coach. Forging high-performing teams together with the scrum master gives me a lot of energy.
+    </p>
+    <p>
+      My extensive experience in applying Agile principles – releasing a minimum viable product to real users fast and then continuously improving based on data and user feedback - allows me to add value for your customers and your organization without wasting valuable time.
     </p>
   </div>
 
