Fixed unsafe cross-origin link
Fixed "Links to cross-origin destinations are unsafe" in Best Practices part of Chrome DevTools Lighthouse test

--- a/english.html
+++ b/english.html
@@ -56,7 +56,7 @@ layout: default
           </div>
       </h2>
 
-      <a href="https://www.linkedin.com/in/mrkbrnd/?locale=en_US" target="_blank"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#linkedin"></use></svg></a>
+      <a href="https://www.linkedin.com/in/mrkbrnd/?locale=en_US" target="_blank" rel="noopener"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#linkedin"></use></svg></a>
 
         <h2 class="footer-heading">
             <div style="text-align:center;padding-top:20px;">
