Toegankelijkheid toegevoegd aan wordcloud

--- a/english_withdate.html
+++ b/english_withdate.html
@@ -55,7 +55,7 @@ layout: default
 
       <h2 class="footer-heading">
           <div style="text-align:justify;padding-bottom:10px;">
-            <p>Scrum  |  Agile  |  Lean UX  |  behavioral targeting  |  Elasticsearch  |  behavior driven development / BDD  |  DevOps  |  full stack development teams  |  website performance optimization  |  SEO optimization  |  continuous integration / continuous development  |  front-end and back-end A/B-testing  |  goal- and user oriented  |  fact-driven  |  coach  |  entrepreneurial  |  keep it simple  |   approachable</p>
+            <p>Scrum  |  Agile  |  Lean UX  |  behavioral targeting  |  Elasticsearch  |  behavior driven development / BDD  |  DevOps  |  full stack development teams  |  website performance optimization  |  SEO optimization  |  accessibility  |  continuous integration / continuous development  |  front-end and back-end A/B-testing  |  goal- and user oriented  |  fact-driven  |  coach  |  entrepreneurial  |  keep it simple  |   approachable</p>
           </div>
       </h2>
 
